--- a/HomePage/style.css
+++ b/HomePage/style.css
@@ -1,5 +1,7 @@
+/** @format */
+
 #main {
-  background-image: url(./banner1.jpg);
+  background-image: url(../Images/banner1t.jpg);
   width: 100%;
   max-height: 10%;
   background-position: center;
@@ -25,4 +27,89 @@ p {
   font-size: small;
   margin-right: 15rem;
   color: black;
+}
+
+/* MAIN Section 1 */
+
+.section1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  max-width: 95%;
+  margin-bottom: 1rem;
+}
+
+.section1-item {
+  width: 200px;
+  height: 240px;
+  border: 2px solid transparent;
+  color: white;
+  overflow-y: scroll;
+}
+
+.item1 {
+  background-color: rgba(58, 36, 36, 0.82);
+}
+.item2 {
+  background-color: rgba(134, 51, 51, 0.77);
+}
+.item3 {
+  background-color: rgba(152, 78, 78, 0.67);
+}
+.item-first-p {
+  color: white;
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 1.5rem;
+  padding-left: 0.5rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+.item-title {
+  color: white;
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 1rem;
+  text-align: center;
+}
+.section1-item hr {
+  width: 80%;
+  display: block;
+  margin: 0 auto;
+  background-color: rgb(255, 255, 255);
+  border: none;
+  margin-top: 1rem;
+}
+.item2 hr {
+  height: 0.1rem;
+  background-color: rgb(0, 0, 0);
+  border: none;
+}
+
+.item-second-p {
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-right: 0;
+  padding-top: 1.5rem;
+  font-size: 0.6rem;
+  font-family: "Source Sans Pro", sans-serif;
+  text-align: center;
+  padding-right: 3rem;
+  padding-left: 3rem;
+  color: white;
+}
+.sticky-btn {
+  /* display: block; */
+  color: white;
+  position: sticky;
+  float: right;
+  top: 0;
+  background-color: rgba(134, 51, 51, 0.77);
+  width: 3rem;
+  height: 5rem;
+  font-size: 0.5rem;
+  border-top-left-radius: 12rem;
+  border-bottom-left-radius: 12rem;
+  margin-top: 8.5rem;
+  border: none;
 }
