--- a/HomePage/style.css
+++ b/HomePage/style.css
@@ -113,3 +113,11 @@ p {
   margin-top: 8.5rem;
   border: none;
 }
+.sticky-btn a {
+  text-decoration: none;
+  color: white;
+}
+.sticky-btn a:hover {
+  text-decoration: none;
+  color: white;
+}
