--- a/SecondPage/secondPage-main.css
+++ b/SecondPage/secondPage-main.css
@@ -1,1 +1,99 @@
 /** @format */
+
+.sticky-btn {
+  /* display: block; */
+  color: white;
+  position: sticky;
+  float: right;
+  top: 0;
+  background-color: rgba(134, 51, 51, 0.77);
+  width: 3rem;
+  height: 5rem;
+  font-size: 0.5rem;
+  border-top-left-radius: 12rem;
+  border-bottom-left-radius: 12rem;
+  margin-top: 8.5rem;
+  border: none;
+}
+.sticky-btn a {
+  text-decoration: none;
+  color: white;
+}
+.sticky-btn a:hover {
+  text-decoration: none;
+  color: white;
+}
+
+.main-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 60%;
+  border: 2px solid transparent;
+  background-color: rgba(134, 51, 51, 0.77);
+  color: white;
+  margin: 0 auto;
+  margin-top: 5rem;
+  font-family: "Source Sans Pro", sans-serif;
+}
+
+.main-first-p {
+  font-size: 1.4rem;
+  font-weight: 300;
+  margin-bottom: 0rem;
+  margin-top: 3rem;
+}
+hr {
+  width: 12rem;
+  height: 0.05rem;
+  background-color: rgb(0, 0, 0);
+  border: none;
+}
+.main-second-p {
+  text-align: center;
+  font-size: 1rem;
+  font-weight: 300;
+  margin-right: 3rem;
+  margin-left: 3rem;
+}
+
+.main-input1 {
+  margin-top: 2rem;
+  width: 30rem;
+  height: 2.5rem;
+  font-size: 1.5rem;
+  border-top: 0.4rem solid rgba(196, 196, 196, 1);
+  border-bottom: 0.5rem solid rgba(196, 196, 196, 1);
+  border-left: 0.5rem solid rgba(196, 196, 196, 1);
+  border-right: 0.5rem solid rgba(196, 196, 196, 1);
+}
+.main-input2 {
+  width: 30rem;
+  height: 2.5rem;
+  font-size: 1.5rem;
+  border-bottom: 0.7rem solid rgba(196, 196, 196, 1);
+  border-right: 0.5rem solid rgba(196, 196, 196, 1);
+  border-left: 0.5rem solid rgba(196, 196, 196, 1);
+  border-top: none;
+}
+
+.main-btn {
+  margin: 2rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 100%;
+}
+.main-btn button {
+  margin: 1rem;
+  background-color: rgba(152, 78, 78, 0.66);
+  border: none;
+  color: white;
+  padding: 1.5rem;
+  font-size: 0.7rem;
+}
