--- a/HomePage/style.css
+++ b/HomePage/style.css
@@ -121,3 +121,49 @@ p {
   text-decoration: none;
   color: white;
 }
+
+/* Here starts Let's talk about your website project */
+.inquiry {
+  margin: auto;
+  width: 100%;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.418), rgba(0, 0, 0, 0.548)),
+    url(images/inquiry.jpg);
+  background-position: center;
+  background-size: cover;
+  text-align: left;
+  padding: 8rem 0rem 8rem 12rem;
+}
+.inquiry h1 {
+  font-family: "Roboto Slab", serif;
+  font-size: 5rem;
+  color: #fff;
+  margin-bottom: 1rem;
+  padding: 0;
+}
+.inquiry h2 {
+  font-family: "Roboto Slab", serif;
+  font-size: 3rem;
+  color: #fff;
+}
+.hero-btn {
+  display: inline-block;
+  text-decoration: none;
+  color: #fff;
+  border: 1px solid #fff;
+  padding: 12px 34px;
+  position: relative;
+  cursor: pointer;
+  font-size: 1rem;
+  margin-bottom: 1rem;
+  margin-top: 2rem;
+  background-color: #863333;
+}
+.inquiry-btn {
+  margin-right: 2rem;
+}
+.hero-btn:hover {
+  border: 1px solid #fff;
+  background: #86333385;
+  transition: 1s;
+}
+/* Here ends Let's talk about your website project */
