--- a/SecondPage/secondPage-main.css
+++ b/SecondPage/secondPage-main.css
@@ -1,5 +1,46 @@
 /** @format */
 
+/* Here starts header */
+body {
+  margin: 0;
+}
+
+#main {
+  background-image: url(../Images/banner1t.jpg);
+  width: 100%;
+  max-height: 10%;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+#overlay {
+  background: #00ff85;
+  opacity: 0.6;
+}
+
+#overlay h1 {
+  font-family: "Source Serif 4", sans-serif;
+  font-size: 44px;
+  font-weight: 500;
+  padding-top: 32px;
+  padding-left: 32px;
+  margin-bottom: 8px;
+  color: black;
+  margin-block-start: 0;
+}
+#overlay p {
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 13px;
+  padding-left: 32px;
+  padding-bottom: 48px;
+  color: black;
+  margin-block-end: 0;
+  margin-block-start: 0;
+}
+/* Here ends HEADER */
+
+/* Here starts MAIN */
+
 .sticky-btn {
   /* display: block; */
   color: white;
@@ -7,11 +48,11 @@
   float: right;
   top: 0;
   background-color: rgba(134, 51, 51, 0.77);
-  width: 3rem;
-  height: 5rem;
-  font-size: 0.5rem;
-  border-top-left-radius: 12rem;
-  border-bottom-left-radius: 12rem;
+  width: 5rem;
+  height: 8rem;
+  font-size: 1rem;
+  border-top-left-radius: 15rem;
+  border-bottom-left-radius: 15rem;
   margin-top: 8.5rem;
   border: none;
 }
@@ -28,6 +69,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  margin-bottom: 1rem;
 }
 .main {
   display: flex;
@@ -38,7 +80,7 @@
   background-color: rgba(134, 51, 51, 0.77);
   color: white;
   margin: 0 auto;
-  margin-top: 5rem;
+  margin-top: 1rem;
   font-family: "Source Sans Pro", sans-serif;
 }
 
