--- a/SecondPage/secondPage-main.css
+++ b/SecondPage/secondPage-main.css
@@ -65,77 +65,191 @@ body {
   color: white;
 }
 
-.main-container {
+/** @format */
+
+/* MAIN */
+
+/* Container */
+.container-fluid {
+  background: linear-gradient(
+    120deg,
+    rgba(58, 36, 36, 0.82) 50%,
+    rgba(152, 78, 78, 0.67) 50%
+  );
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  margin-bottom: 1rem;
+  justify-content: space-between;
+  max-width: 80%;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
-.main {
+/* First column */
+.main-item-1 {
+  padding-top: 2rem;
+  margin-left: 2rem;
+  margin-right: 3rem;
+  margin-bottom: 2rem;
+}
+
+.logo {
+  max-width: 10rem;
+  max-height: 8rem;
+  border-radius: 15rem;
+  border: 3px solid #00ff85;
+  margin-bottom: 1rem;
+  -webkit-box-shadow: 0px 0px 47px 4px rgba(0, 0, 0, 0.52);
+  -moz-box-shadow: 0px 0px 47px 4px rgba(0, 0, 0, 0.52);
+  box-shadow: 0px 0px 47px 4px rgba(0, 0, 0, 0.52);
+}
+
+.col1-h1 {
+  font-family: "Source Serif 4", sans-serif;
+  color: white;
+}
+
+.col1-p {
+  font-family: "Source Sans Pro", sans-serif;
+  margin-top: 1rem;
+  color: white;
+}
+
+/* Second Column */
+.main-item-2 {
+  padding-top: 6rem;
+  margin-left: 6rem;
+}
+.col2-h1 {
+  font-family: "Source Serif 4", sans-serif;
+  color: white;
+  margin-left: 2rem;
+  margin-bottom: 2rem;
+}
+
+.col-input {
+  width: 80%;
+  border-bottom: rgba(58, 36, 36, 0.82);
+  border: none;
+  border-bottom: 1px solid black;
+  margin-top: 2rem;
+  background-color: #bb8989;
+  margin-left: 2rem;
+  color: white;
+}
+.col-input::placeholder {
+  color: rgba(58, 36, 36, 0.82);
+}
+i {
+  position: relative;
+  right: 1.5rem;
+  color: rgba(58, 36, 36, 0.82);
+}
+
+/** @format */
+/* Here starts footer*/
+.footer-container {
+  background-color: #ca9999;
+}
+
+.footer {
+  position: relative;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #ca9999;
+  height: auto;
+  width: 100%;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: 0 auto;
+}
+
+.footer-heading {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  width: 60%;
-  border: 2px solid transparent;
-  background-color: rgba(134, 51, 51, 0.77);
-  color: white;
-  margin: 0 auto;
-  margin-top: 1rem;
-  font-family: "Source Sans Pro", sans-serif;
+  margin-right: 6rem;
 }
 
-.main-first-p {
-  font-size: 1.4rem;
-  font-weight: 300;
-  margin-bottom: 0rem;
-  margin-top: 3rem;
+.footer-heading h2 {
+  margin-bottom: 2rem;
 }
-hr {
-  width: 12rem;
-  height: 0.05rem;
-  background-color: rgb(0, 0, 0);
+
+.footer-heading a {
+  color: #fff;
+  text-decoration: none;
+  margin-bottom: 0.5rem;
+}
+
+.footer-heading a:hover {
+  color: #863333;
+  transition: 0.3s ease-out;
+}
+
+.footer-email-form h2 {
+  margin-bottom: 2rem;
+}
+#footer-email {
+  width: 250px;
+  height: 40px;
+  outline: none;
   border: none;
-}
-.main-second-p {
-  text-align: center;
+  padding-left: 0.5rem;
   font-size: 1rem;
-  font-weight: 300;
-  margin-right: 3rem;
-  margin-left: 3rem;
+  margin-bottom: 1rem;
+}
+#footer-email::placeholder {
+  color: #b1b1b1;
 }
 
-.main-input1 {
-  margin-top: 2rem;
-  width: 30rem;
-  height: 2.5rem;
-  font-size: 1.5rem;
-  border-top: 0.4rem solid rgba(196, 196, 196, 1);
-  border-bottom: 0.5rem solid rgba(196, 196, 196, 1);
-  border-left: 0.5rem solid rgba(196, 196, 196, 1);
-  border-right: 0.5rem solid rgba(196, 196, 196, 1);
-}
-.main-input2 {
-  width: 30rem;
-  height: 2.5rem;
-  font-size: 1.5rem;
-  border-bottom: 0.7rem solid rgba(196, 196, 196, 1);
-  border-right: 0.5rem solid rgba(196, 196, 196, 1);
-  border-left: 0.5rem solid rgba(196, 196, 196, 1);
-  border-top: none;
-}
-
-.main-btn {
-  margin: 2rem;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  width: 100%;
-}
-.main-btn button {
-  margin: 1rem;
-  background-color: rgba(152, 78, 78, 0.66);
+#footer-email-btn {
+  width: 100px;
+  height: 40px;
+  outline: none;
   border: none;
-  color: white;
-  padding: 1.5rem;
-  font-size: 0.7rem;
+  background-color: #863333;
+  color: #fff;
+  font-size: 1rem;
+}
+
+#footer-email-btn:hover {
+  cursor: pointer;
+  background-color: #8633339f;
+  transition: all 0.4s ease-out;
+}
+.icons .fa {
+  color: #ffff;
+  margin-left: 1rem;
+  cursor: pointer;
+  padding: 0;
+}
+.fa.fa-facebook {
+  margin-left: 1.5rem;
+}
+.icons .fa:hover {
+  cursor: pointer;
+  color: #863333;
+  transition: all 0.4s ease-out;
+}
+
+@media screen and (max-width: 1150px) {
+  .footer {
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .footer {
+    padding-top: 2rem;
+  }
+}
+@media screen and (max-width: 720px) {
+  .footer-email-form {
+    margin-top: 2rem;
+  }
 }
