--- a/SecondPage/secondPage-main.css
+++ b/SecondPage/secondPage-main.css
@@ -1,42 +1,83 @@
 /** @format */
 
-/* Here starts header */
-body {
+/* HEADER */
+* {
+  padding: 0;
   margin: 0;
+  box-sizing: border-box;
+  font-family: "Outfit", sans-serif;
 }
 
-#main {
+.header-whole {
   background-image: url(../Images/banner1t.jpg);
+  opacity: 0.9;
   width: 100%;
-  max-height: 10%;
+
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-}
-#overlay {
-  background: #00ff85;
-  opacity: 0.6;
+  position: relative;
 }
 
-#overlay h1 {
+.header-whole h1 {
   font-family: "Source Serif 4", sans-serif;
-  font-size: 44px;
-  font-weight: 500;
-  padding-top: 32px;
-  padding-left: 32px;
-  margin-bottom: 8px;
-  color: black;
-  margin-block-start: 0;
+  color: white;
+  padding-left: 2rem;
+  padding-top: 2rem;
 }
-#overlay p {
+.header-whole p {
+  padding-left: 2rem;
+  padding-bottom: 3rem;
   font-family: "Source Sans Pro", sans-serif;
-  font-size: 13px;
-  padding-left: 32px;
-  padding-bottom: 48px;
-  color: black;
-  margin-block-end: 0;
-  margin-block-start: 0;
+  font-size: small;
+  margin-right: 15rem;
+  color: white;
 }
+
+.navbar {
+  float: right;
+  font-size: small;
+  color: white;
+  font-family: "Source Sans Pro", sans-serif;
+  margin-right: 1rem;
+}
+.navbarlist {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+.navbarlist li {
+  float: left;
+}
+
+.navbarlist li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 2px 2px;
+  text-decoration: none;
+}
+
+.navbarlist li a:hover:not(.active) {
+  background-color: #111;
+}
+.navbarlist li a.active {
+  background-color: #4caf50;
+}
+.navbarlist li.right {
+  float: right;
+}
+
+@media screen and (max-width: 600px) {
+  .navbarlist li.right,
+  .navbarlist li {
+    float: none;
+  }
+}
+
 /* Here ends HEADER */
 
 /* Here starts MAIN */
@@ -64,8 +105,6 @@ body {
   text-decoration: none;
   color: white;
 }
-
-/** @format */
 
 /* MAIN */
 
@@ -105,12 +144,16 @@ body {
 .col1-h1 {
   font-family: "Source Serif 4", sans-serif;
   color: white;
-
+}
+.col1-p {
+  font-family: "Source Sans Pro", sans-serif;
+  margin-top: 1rem;
+  color: white;
 }
 
 /* Second Column */
 .main-item-2 {
-  padding-top: 6rem;
+  padding-top: 5rem;
   margin-left: 6rem;
 }
 .col2-h1 {
@@ -122,21 +165,26 @@ body {
 
 .col-input {
   width: 80%;
-  border-bottom: rgba(58, 36, 36, 0.82);
   border: none;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid rgba(58, 36, 36, 0.82);
   margin-top: 2rem;
   background-color: #bb8989;
   margin-left: 2rem;
   color: white;
 }
+.col-input::placeholder {
+  color: rgba(58, 36, 36, 0.82);
+}
+.div-input i {
+  position: relative;
+  right: 1.5rem;
+  color: rgba(58, 36, 36, 0.82);
+}
 
-/** @format */
 /* Here starts footer*/
 .footer-container {
   background-color: #ca9999;
 }
-
 .footer {
   position: relative;
   bottom: 0;
@@ -213,7 +261,7 @@ body {
   padding: 0;
 }
 .fa.fa-facebook {
-  margin-left: 1.5rem;
+  margin-left: 0rem;
 }
 .icons .fa:hover {
   cursor: pointer;
