--- a/SecondPage/secondPage-main.css
+++ b/SecondPage/secondPage-main.css
@@ -12,11 +12,13 @@
   background-image: url(../Images/banner1t.jpg);
   opacity: 0.9;
   width: 100%;
+  height: 400px;
 
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
+  margin-bottom: 2rem;
 }
 
 .header-whole h1 {
@@ -24,19 +26,27 @@
   color: white;
   padding-left: 2rem;
   padding-top: 2rem;
+  font-size: 3rem;
 }
+
+.header-wording:hover {
+  cursor: pointer;
+  color: #333;
+  transition: all 0.4s ease-out;
+}
+
 .header-whole p {
   padding-left: 2rem;
   padding-bottom: 3rem;
   font-family: "Source Sans Pro", sans-serif;
-  font-size: small;
+  font-size: 1.8rem;
   margin-right: 15rem;
   color: white;
 }
 
 .navbar {
   float: right;
-  font-size: small;
+  font-size: 1.5rem;
   color: white;
   font-family: "Source Sans Pro", sans-serif;
   margin-right: 1rem;
@@ -50,14 +60,14 @@
 }
 
 .navbarlist li {
-  float: left;
+  float: right;
 }
 
 .navbarlist li a {
   display: block;
   color: white;
   text-align: center;
-  padding: 2px 2px;
+  padding: 4px 4px;
   text-decoration: none;
 }
 
@@ -77,7 +87,6 @@
     float: none;
   }
 }
-
 /* Here ends HEADER */
 
 /* Here starts MAIN */
