--- a/HomePage/style.css
+++ b/HomePage/style.css
@@ -102,8 +102,15 @@
   border: 2px solid transparent;
   color: white;
   overflow-y: scroll;
+  -webkit-box-shadow: 0px 0px 13px 4px rgba(0, 0, 0, 0.59);
+  box-shadow: 0px 0px 13px 4px rgba(0, 0, 0, 0.59);
+  margin-bottom: 2rem;
+  margin-top: 1.5rem;
 }
-
+.section1-item:hover {
+  filter: contrast(1.4);
+  filter: drop-shadow(0 0 0.75rem crimson);
+}
 .item1 {
   background-color: rgba(58, 36, 36, 0.82);
 }
