--- a/SecondPage/secondPage-main.css
+++ b/SecondPage/secondPage-main.css
@@ -101,6 +101,7 @@
   width: 5rem;
   height: 8rem;
   font-size: 1rem;
+  font-family: "Source Serif 4", sans-serif;
   border-top-left-radius: 15rem;
   border-bottom-left-radius: 15rem;
   margin-top: 8.5rem;
@@ -138,6 +139,8 @@
   -moz-box-shadow: 0px 1px 38px -6px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 1px 38px -6px rgba(0, 0, 0, 0.75);
   border-radius: 10px;
+  position: relative;
+  cursor: pointer;
 }
 /* First column */
 .main-item-1 {
@@ -196,12 +199,11 @@
   border: none;
   border-bottom: 1px solid rgba(58, 36, 36, 0.82);
   margin-top: 2rem;
-  background-color: #bb8989;
+  background-color: #bb8988;
   margin-left: 2rem;
-  color: white;
+  color: rgba(58, 36, 36, 0.82);
 }
 .col-input:focus {
-  background-color: rgba(255, 38, 0, 0.097);
   outline: none;
 }
 .col-input::placeholder {
@@ -209,16 +211,82 @@
 }
 .div-input i {
   position: relative;
-  right: 1.5rem;
+  right: 2rem;
   color: rgba(58, 36, 36, 0.82);
   transition: color 1s;
 }
 .div-input i:hover {
   color: white;
 }
+.submit-btn {
+  display: block;
+  margin: 0 auto;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  background-color: rgba(134, 51, 51, 0.77);
+  width: 10rem;
+  height: 2.5rem;
+  border: none;
+  border-radius: 2rem;
+  color: white;
+  font-family: "Source Serif 4", sans-serif;
+}
+#modal {
+  display: none;
+  filter: brightness(1.2);
+  filter: contrast(1.75);
+  width: 30rem;
+  height: 15em;
+  border: 3px solid black;
+  border-radius: 2rem;
+  position: fixed;
+  right: 35rem;
+  top: 15rem;
+  color: rgb(0, 0, 0);
+  background-color: rgb(240, 173, 173);
+}
+.modal-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  font-family: "Source Serif 4", sans-serif;
+}
+.close-btn {
+  background-color: rgba(134, 51, 51, 0.77);
+  width: 4rem;
+  height: 2rem;
+  border: none;
+  border-radius: 0.3rem;
+  color: white;
+  font-family: "Source Serif 4", sans-serif;
+}
 
 /* Responsive */
+
+@media screen and (max-width: 1100px) {
+  #modal {
+    width: 20rem;
+    height: 10rem;
+    right: 20rem;
+    left: 20rem;
+  }
+  .modal-container h5 {
+    text-align: center;
+  }
+}
 @media screen and (max-width: 950px) {
+  #modal {
+    width: 20rem;
+    height: 10rem;
+    right: 10rem;
+    left: 10rem;
+  }
+  .modal-container h5 {
+    text-align: center;
+  }
   .row {
     display: flex;
     flex-direction: column;
@@ -246,6 +314,21 @@
   }
 }
 @media screen and (max-width: 600px) {
+  #modal {
+    width: 12rem;
+    height: 8rem;
+    left: 6rem;
+    right: 4rem;
+  }
+  .close-btn {
+    width: 2.5rem;
+    height: 1.5rem;
+    font-size: 0.8rem;
+  }
+  .modal-container h5 {
+    font-size: 0.7rem;
+    text-align: center;
+  }
   .col1-h1 {
     display: none;
   }
