--- a/HomePage/style.css
+++ b/HomePage/style.css
@@ -191,7 +191,10 @@ nav {
   margin-left: 0;
   padding: 10px 40px;
 }
-
+.mobile-menu li a {
+  text-decoration: none;
+  color: white;
+}
 .mobile-menu-btn {
   z-index: 3;
   position: fixed;
